--- a/Backend/build.gradle
+++ b/Backend/build.gradle
@@ -22,7 +22,10 @@ targetCompatibility = 1.8
 
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
+    compile 'org.hibernate:hibernate-core:4.3.6.Final'
+    compile('org.springframework.boot:spring-boot-devtools')
     testCompile('org.springframework.boot:spring-boot-starter-test')
+    testCompile('junit:junit')
 }
 
 bootJar {
