--- a/Backend/build.gradle
+++ b/Backend/build.gradle
@@ -32,6 +32,7 @@ targetCompatibility = 1.8
 dependencies {
     compile('org.springframework.boot:spring-boot-starter-web')
     compile('org.springframework.boot:spring-boot-devtools') // TODO(e-carlin): Make sure this isn't pulled in in the production jar
+    compile("org.springframework.boot:spring-boot-starter-data-jpa")
     testCompile('junit:junit')
     compile 'org.hibernate:hibernate-core:4.3.6.Final'
     testCompile('org.springframework.boot:spring-boot-starter-test')
